k8s/base/backend/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: eventfund-dev
  labels:
    app: api
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      protocol: TCP
      port: 4000
      targetPort: 4000
